firewall.conf
# Generated by iptables-save v1.4.21 on Mon Nov  4 13:35:20 2019
*filter
:INPUT DROP [607:79073]
:FORWARD DROP [38:2280]
:OUTPUT DROP [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.20.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.20.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 53 -j ACCEPT
-A FORWARD -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Mon Nov  4 13:35:20 2019
# Generated by iptables-save v1.4.21 on Mon Nov  4 13:35:20 2019
*nat
:PREROUTING ACCEPT [657:82796]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.20.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Nov  4 13:35:20 2019
